# CLI-Anything

./: .gitignore  CONTRIBUTING.md  README.md  registry.json
.github/workflows/: deploy-pages.yml
cloudanalyzer/agent-harness/: CLOUDANALYZER.md  setup.py
docs/hub/: SKILL.txt  index.html
openscreen/agent-harness/: TEST.md
safari/agent-harness/: .gitignore  HARNESS.md  SAFARI.md  setup.py
unimol_tools/agent-harness/: .gitignore  README.md  README_DEMO.md  UNIMOL_TOOLS.md  demo_real_examples.sh  pyproject.toml  test_features.sh
unimol_tools/agent-harness/cli_anything/unimol_tools/: SKILL.md  __main__.py  unimol_tools_cli.py
unimol_tools/agent-harness/cli_anything/unimol_tools/core/: cleanup.py  models_manager.py  predict.py  project.py  session.py  storage.py  train.py
unimol_tools/agent-harness/cli_anything/unimol_tools/tests/: conftest.py  test_all_tasks.py  test_cleanup.py  test_core.py  test_full_e2e.py  test_models_manager.py  test_storage.py
unimol_tools/agent-harness/cli_anything/unimol_tools/utils/: unimol_backend.py  weights.py
unimol_tools/agent-harness/docs/: README.md
unimol_tools/agent-harness/docs/architecture/: API.md  DESIGN.md
unimol_tools/agent-harness/docs/guides/: 01-INSTALLATION.md  02-QUICK-START.md  03-BASIC-USAGE.md  04-INTERACTIVE-FEATURES.md  05-TROUBLESHOOTING.md
unimol_tools/agent-harness/docs/test/: TEST_REPORT.md  run_tests.sh
unimol_tools/agent-harness/docs/tutorials/: ADVANCED.md  CLASSIFICATION.md  REGRESSION.md
unimol_tools/agent-harness/docs/workflows/: CLEANUP-SOP.md  DIAGRAMS.md  TRAINING-SOP.md
(+39 files in other folders)
